@@ -3,6 +3,8 @@ Changese between 2.2.3 and ...
 
 - fix issue 126: correctly match all invalid xml characters for junitxml
   binary escape
+- fix issue with unittest: now @unittest.expectedFailure markers should
+  be processed correctly (you can also use @pytest.mark markers)
 - document integration with the extended distribute/setuptools test commands
 
 
